RESOLVED FIXED89726
op_resolve_global should not prevent DFG inlining
https://bugs.webkit.org/show_bug.cgi?id=89726
Summary op_resolve_global should not prevent DFG inlining
Filip Pizlo
Reported 2012-06-21 18:19:58 PDT
Patch forthcoming.
Attachments
the patch (11.00 KB, patch)
2012-06-21 18:22 PDT, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-06-21 18:22:15 PDT
Created attachment 148935 [details] the patch
WebKit Review Bot
Comment 2 2012-06-21 18:27:30 PDT
Attachment 148935 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGOperations.h:68: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2012-06-21 18:33:49 PDT
Note You need to log in before you can comment on or make changes to this bug.