Source/JavaScriptCore/dfg/DFGCapabilities.h
@@ -193,7 +193,6 @@ inline bool canInlineOpcode(OpcodeID opcodeID, CodeBlock* codeBlock, Instruction
     case op_put_scoped_var:
     case op_resolve:
     case op_resolve_base:
-    case op_resolve_global:
         
     // Constant buffers aren't copied correctly. This is easy to fix, but for
     // now we just disable inlining for functions that use them.
